<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:id="@+id/order_lay"
        android:background="@color/gray_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:id="@+id/ticket_itm_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/order_user_img"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/person_ic"
                app:civ_border_color="@color/base"
                app:civ_border_width="2dp"
                android:layout_margin="10dp"
                />
            <TextView
                android:id="@+id/order_osta_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="order osta name"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginBottom="10dp"/>
            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/department"
                    android:textSize="14sp"
                    android:layout_marginEnd="10dp"/>
                <TextView
                    android:textSize="14sp"
                    android:id="@+id/department_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--------------"
                    android:layout_marginEnd="10dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subject"
                    android:layout_marginEnd="10dp"/>
                <TextView
                    android:textSize="14sp"
                    android:id="@+id/subject_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--------------"
                    android:layout_marginEnd="10dp"/>

            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/base"
                android:backgroundTint="@color/base"
                app:cardCornerRadius="5dp">
                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/normal_btn_lay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <Button
                        android:id="@+id/edit_order_btn"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:text="@string/edit"
                        android:textColor="@color/base"
                        android:backgroundTint="@color/white"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/osta_btn_lay"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:background="@drawable/whit_border_bg"
                        android:layout_margin="10dp"
                        android:id="@+id/show_order_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="27dp">
                        <TextView
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:text="@string/shpw_order_title"/>
                    </LinearLayout>


                    <Button
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:id="@+id/reciev_order_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/recieve_order"
                        android:textColor="@color/base"
                        android:backgroundTint="@color/white"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>