<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:background="@drawable/previous_order_item_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_margin="10dp"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_window"/>
                    <TextView
                        android:layout_marginEnd="10dp"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:text="@string/type"
                        android:gravity="center_vertical"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text=":"
                        />
                    <TextView
                        android:id="@+id/order_type_txt"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="........................"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_margin="10dp"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_drop_down"/>
                    <TextView
                        android:layout_marginEnd="10dp"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:text="@string/topic"
                        android:gravity="center_vertical"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text=":"
                        />
                    <TextView
                        android:id="@+id/order_topic_txt"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="........................"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_margin="10dp"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_alert"/>
                    <TextView
                        android:layout_marginEnd="10dp"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:text="@string/status"
                        android:gravity="center_vertical"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text=":"
                        />
                    <TextView
                        android:id="@+id/order_status_txt"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="........................"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_margin="10dp"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_coast"/>
                    <TextView
                        android:layout_marginEnd="10dp"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:text="@string/coast"
                        android:gravity="center_vertical"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text=":"
                        />
                    <TextView
                        android:id="@+id/order_coast_txt"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="........................"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_margin="10dp"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_calendar"/>
                    <TextView
                        android:layout_marginEnd="10dp"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:text="@string/order_date"
                        android:gravity="center_vertical"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text=":"
                        />
                    <TextView
                        android:id="@+id/order_start_txt"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="........................"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_margin="10dp"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_calendar"/>
                    <TextView
                        android:layout_marginEnd="10dp"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:text="@string/end_date"
                        android:gravity="center_vertical"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text=":"
                        />
                    <TextView
                        android:id="@+id/order_end_txt"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="........................"
                        />

                </LinearLayout>
            </LinearLayout>



        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>